Easy spaces/main/default/objects/Job_Posting__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <label>Company Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cloudfulcrum</fullName>
            </value>
            <value>
                <fullName>Realase Owl</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>