Easy spaces/main/default/objects/Job_Posting__c/fields/Educational_Qualifications__c.field-meta.xml
<CustomField>
    <fullName>Educational_Qualifications__c</fullName>
    <label>Educational Qualifications</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>