Easy spaces/main/default/objects/Job_Posting__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>