Easy spaces/main/default/objects/Job_Posting__c/fields/Experience__c.field-meta.xml
<CustomField>
    <fullName>Experience__c</fullName>
    <label>Experience</label>
    <length>60</length>
    <type>Text</type>
</CustomField>