Easy spaces/main/default/objects/Job_Posting__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Virgina, US</fullName>
            </value>
            <value>
                <fullName>New York, US</fullName>
            </value>
            <value>
                <fullName>Hyderabad, India</fullName>
            </value>
            <value>
                <fullName>Ottawa, Canada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>