Easy spaces/main/default/objects/Job_Posting__c/fields/Number_Of_Positions__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Positions__c</fullName>
    <label>Number Of Positions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>