Easy spaces/main/default/objects/Job_Posting__c/fields/Skillset__c.field-meta.xml
<CustomField>
    <fullName>Skillset__c</fullName>
    <label>Skillset</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Slaesforce</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>DevOps</fullName>
            </value>
            <value>
                <fullName>WebDesigner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>