Easy spaces/main/default/objects/Job_Posting__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Time</fullName>
            </value>
            <value>
                <fullName>Part TIme</fullName>
            </value>
            <value>
                <fullName>Internship</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>