Easy spaces/main/default/objects/Job_Posting__c/validationRules/Close_Date_must_be_specified.validationRule-meta.xml
<ValidationRule>
    <fullName>Close_Date_must_be_specified</fullName>
    <active>true</active>
    <description>Close Date must be specified when the status is set to &apos;Closed -Filled. or &apos;Closed -Not Approved&apos;</description>
    <errorConditionFormula>ISPICKVAL( Status__c , &quot;Closed -Filled&quot;) || ISPICKVAL( Status__c , &quot;Closed -Not Approved&quot;)</errorConditionFormula>
    <errorMessage>Close Date must be specified</errorMessage>
</ValidationRule>