Easy spaces/main/default/objects/Job_Posting__c/listViews/Candidate_Status.listView-meta.xml
<ListView>
    <fullName>Candidate_Status</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Candidate Status</label>
</ListView>